FIXES TO APP DISTRIBUTION.